--- a/apps/wallet-mobile/translations/messages/src/features/Settings/WalletSettings/WalletSettingsScreen.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Settings/WalletSettings/WalletSettingsScreen.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!General",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 212,
+      "line": 213,
       "column": 11,
-      "index": 6831
+      "index": 6872
     },
     "end": {
-      "line": 215,
+      "line": 216,
       "column": 3,
-      "index": 6929
+      "index": 6970
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Actions",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 216,
+      "line": 217,
       "column": 11,
-      "index": 6942
+      "index": 6983
     },
     "end": {
-      "line": 219,
+      "line": 220,
       "column": 3,
-      "index": 7040
+      "index": 7081
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Switch wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 220,
+      "line": 221,
       "column": 16,
-      "index": 7058
+      "index": 7099
     },
     "end": {
-      "line": 223,
+      "line": 224,
       "column": 3,
-      "index": 7167
+      "index": 7208
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Logout",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 224,
+      "line": 225,
       "column": 10,
-      "index": 7179
+      "index": 7220
     },
     "end": {
-      "line": 227,
+      "line": 228,
       "column": 3,
-      "index": 7275
+      "index": 7316
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Wallet name",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 228,
+      "line": 229,
       "column": 14,
-      "index": 7291
+      "index": 7332
     },
     "end": {
-      "line": 231,
+      "line": 232,
       "column": 3,
-      "index": 7396
+      "index": 7437
     }
   },
   {
@@ -79,29 +79,29 @@
     "defaultMessage": "!!!Security",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 232,
+      "line": 233,
       "column": 12,
-      "index": 7410
+      "index": 7451
     },
     "end": {
-      "line": 235,
+      "line": 236,
       "column": 3,
-      "index": 7510
+      "index": 7551
     }
   },
   {
     "id": "components.settings.walletsettingscreen.changePassword",
-    "defaultMessage": "!!!Change password",
+    "defaultMessage": "!!!Change spending password",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 236,
+      "line": 237,
       "column": 18,
-      "index": 7530
+      "index": 7571
     },
     "end": {
-      "line": 239,
+      "line": 240,
       "column": 3,
-      "index": 7643
+      "index": 7693
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Easy transaction confirmation",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 240,
+      "line": 241,
       "column": 20,
-      "index": 7665
+      "index": 7715
     },
     "end": {
-      "line": 243,
+      "line": 244,
       "column": 3,
-      "index": 7794
+      "index": 7844
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Remove wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 244,
+      "line": 245,
       "column": 16,
-      "index": 7812
+      "index": 7862
     },
     "end": {
-      "line": 247,
+      "line": 248,
       "column": 3,
-      "index": 7921
+      "index": 7971
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Collateral",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 248,
+      "line": 249,
       "column": 14,
-      "index": 7937
+      "index": 7987
     },
     "end": {
-      "line": 251,
+      "line": 252,
       "column": 3,
-      "index": 8008
+      "index": 8058
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Network:",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 253,
+      "line": 254,
       "column": 11,
-      "index": 8069
+      "index": 8119
     },
     "end": {
-      "line": 256,
+      "line": 257,
       "column": 3,
-      "index": 8135
+      "index": 8185
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Wallet type:",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 257,
+      "line": 258,
       "column": 14,
-      "index": 8151
+      "index": 8201
     },
     "end": {
-      "line": 260,
+      "line": 261,
       "column": 3,
-      "index": 8257
+      "index": 8307
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Byron-era wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 261,
+      "line": 262,
       "column": 15,
-      "index": 8274
+      "index": 8324
     },
     "end": {
-      "line": 264,
+      "line": 265,
       "column": 3,
-      "index": 8385
+      "index": 8435
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Shelley-era wallet",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 265,
+      "line": 266,
       "column": 17,
-      "index": 8404
+      "index": 8454
     },
     "end": {
-      "line": 268,
+      "line": 269,
       "column": 3,
-      "index": 8519
+      "index": 8569
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Unknown Wallet Type",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 269,
+      "line": 270,
       "column": 21,
-      "index": 8542
+      "index": 8592
     },
     "end": {
-      "line": 272,
+      "line": 273,
       "column": 3,
-      "index": 8662
+      "index": 8712
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!About",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 273,
+      "line": 274,
       "column": 9,
-      "index": 8673
+      "index": 8723
     },
     "end": {
-      "line": 276,
+      "line": 277,
       "column": 3,
-      "index": 8767
+      "index": 8817
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Resync",
     "file": "src/features/Settings/WalletSettings/WalletSettingsScreen.tsx",
     "start": {
-      "line": 277,
+      "line": 278,
       "column": 10,
-      "index": 8779
+      "index": 8829
     },
     "end": {
-      "line": 280,
+      "line": 281,
       "column": 3,
-      "index": 8881
+      "index": 8931
     }
   }
 ]
