feat(screen-share): Create screen-share setting (#2879)

--- a/apps/wallet-mobile/translations/messages/src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!General",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 199,
+      "line": 233,
       "column": 11,
-      "index": 6731
+      "index": 8119
     },
     "end": {
-      "line": 202,
+      "line": 236,
       "column": 3,
-      "index": 6841
+      "index": 8229
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Security & Reporting",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 203,
+      "line": 237,
       "column": 21,
-      "index": 6864
+      "index": 8252
     },
     "end": {
-      "line": 206,
+      "line": 240,
       "column": 3,
-      "index": 6997
+      "index": 8385
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Language",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 207,
+      "line": 241,
       "column": 18,
-      "index": 7017
+      "index": 8405
     },
     "end": {
-      "line": 210,
+      "line": 244,
       "column": 3,
-      "index": 7129
+      "index": 8517
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Fiat Currency",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 211,
+      "line": 245,
       "column": 22,
-      "index": 7153
+      "index": 8541
     },
     "end": {
-      "line": 214,
+      "line": 248,
       "column": 3,
-      "index": 7274
+      "index": 8662
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!About",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 215,
+      "line": 249,
       "column": 9,
-      "index": 7285
+      "index": 8673
     },
     "end": {
-      "line": 218,
+      "line": 252,
       "column": 3,
-      "index": 7385
+      "index": 8773
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Terms of Service Agreement",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 219,
+      "line": 253,
       "column": 18,
-      "index": 7405
+      "index": 8793
     },
     "end": {
-      "line": 222,
+      "line": 256,
       "column": 3,
-      "index": 7532
+      "index": 8920
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Change PIN",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 223,
+      "line": 257,
       "column": 13,
-      "index": 7547
+      "index": 8935
     },
     "end": {
-      "line": 226,
+      "line": 260,
       "column": 3,
-      "index": 7656
+      "index": 9044
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Hide balance",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 227,
+      "line": 261,
       "column": 15,
-      "index": 7673
+      "index": 9061
     },
     "end": {
-      "line": 230,
+      "line": 264,
       "column": 3,
-      "index": 7786
+      "index": 9174
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!This function will be applied to all wallets in your app",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 231,
+      "line": 265,
       "column": 19,
-      "index": 7807
+      "index": 9195
     },
     "end": {
-      "line": 234,
+      "line": 268,
       "column": 3,
-      "index": 7968
+      "index": 9356
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Sign in with your biometrics",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 235,
+      "line": 269,
       "column": 20,
-      "index": 7990
+      "index": 9378
     },
     "end": {
-      "line": 238,
+      "line": 272,
       "column": 3,
-      "index": 8124
+      "index": 9512
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Changes to this option will be reflected after restarting the application",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 239,
+      "line": 273,
       "column": 24,
-      "index": 8150
+      "index": 9538
     },
     "end": {
-      "line": 242,
+      "line": 276,
       "column": 3,
-      "index": 8333
+      "index": 9721
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Send crash report to Emurgo",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 243,
+      "line": 277,
       "column": 18,
-      "index": 8353
+      "index": 9741
     },
     "end": {
-      "line": 246,
+      "line": 280,
       "column": 3,
-      "index": 8484
+      "index": 9872
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Changes to this option will be reflected after restarting the application",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 247,
+      "line": 281,
       "column": 22,
-      "index": 8508
+      "index": 9896
     },
     "end": {
-      "line": 250,
+      "line": 284,
       "column": 3,
-      "index": 8689
+      "index": 10077
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Analytics",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 251,
+      "line": 285,
       "column": 13,
-      "index": 8704
+      "index": 10092
     },
     "end": {
-      "line": 254,
+      "line": 288,
       "column": 3,
-      "index": 8812
+      "index": 10200
     }
   },
   {
@@ -214,14 +214,44 @@
     "defaultMessage": "!!!Privacy Policy",
     "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
     "start": {
-      "line": 255,
+      "line": 289,
       "column": 17,
-      "index": 8831
+      "index": 10219
     },
     "end": {
-      "line": 258,
+      "line": 292,
       "column": 3,
-      "index": 8948
+      "index": 10336
+    }
+  },
+  {
+    "id": "components.settings.applicationsettingsscreen.screenSharing",
+    "defaultMessage": "!!!Enable screensharing",
+    "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
+    "start": {
+      "line": 293,
+      "column": 17,
+      "index": 10355
+    },
+    "end": {
+      "line": 296,
+      "column": 3,
+      "index": 10478
+    }
+  },
+  {
+    "id": "components.settings.applicationsettingsscreen.screenSharingInfo",
+    "defaultMessage": "!!!Changes to this option will enable you to make screenshots as well share your screen via third party apps",
+    "file": "src/features/Settings/ApplicationSettings/ApplicationSettingsScreen.tsx",
+    "start": {
+      "line": 297,
+      "column": 21,
+      "index": 10501
+    },
+    "end": {
+      "line": 301,
+      "column": 3,
+      "index": 10719
     }
   }
 ]
