--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -189,6 +189,9 @@
   "swap.listOrders.timeCreated": "Time created",
   "swap.listOrders.timeCompleted": "Time completed",
   "swap.listOrders.txId": "Transaction ID",
+  "swap.listOrders.emptyOpenOrders": "No orders avaliable yet",
+  "swap.listOrders.emptyOpenOrdersSub": "Start doing the swap operations to your open orders here",
+  "swap.listOrders.emptyCompletedOrders": "No orders completed yet",
   "swap.swapScreen.limitPriceWarningTitle": "Limit price",
   "swap.swapScreen.limitPriceWarningDescription": "Are you sure you want to proceed this order with the limit price that is 10% or more higher than the market price?",
   "swap.swapScreen.limitPriceWarningYourPrice": "Your limit price",
