--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -8,6 +8,7 @@
   "menu.supportTitle": "Any questions?",
   "menu.supportLink": "Ask our support team",
   "menu.knowledgeBase": "Knowledge base",
+  "menu.governanceCenter": "Governance Center",
   "analytics.accept": "Accept",
   "analytics.anonymous": "Anonymous analytics data",
   "analytics.description": "Share user insights to help us fine tune Yoroi to better serve your needs.",
